<resources>
    <string name="app_name">RadioG</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="release_date_bn">মুক্তির তারিখ</string>
    <string name="release_date_en">Release Date</string>
    <string name="home">Home</string>
    <string name="premium">Premium</string>
    <string name="free">Free</string>
    <string name="hits">Hits</string>
    <string name="selected">Selected</string>
    <string name="mylist">My List</string>
    <string name="exclusive">Exclusive</string>
    <string name="new_album">New Album</string>
    <string name="catagory">Category</string>
    <string name="settings">Settings</string>
    <string name="offline">Offline</string>
    <string name="notice">Notice</string>
    <string name="subscription">Subscription</string>
    <string name="hit_bn">জনপ্রিয়</string>
    <string name="home_bn">হোম</string>
    <string name="premium_bn">প্রিমিয়াম</string>
    <string name="free_bn">ফ্রি</string>
    <string name="hits_bn">জনপ্রিয়</string>
    <string name="selected_bn">নির্বাচিত গান</string>
    <string name="mylist_bn">আমার লিস্ট</string>
    <string name="exclusive_bn">এক্সক্লুসিভ আয়োজন</string>
    <string name="new_album_bn">নতুন এলবাম</string>
    <string name="catagory_bn">ক্যাটাগরী</string>
    <string name="settings_bn">সেটিংস</string>
    <string name="offline_bn">অফলাইন</string>
    <string name="notice_bn">নোটিশ</string>
    <string name="subscription_bn">সাবস্ক্রিপশন</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_songlist">SonglistActivity</string>
    <string name="freezoneText">Selected Songs</string>
    <string name="hitsText">Hit Songs</string>
    <string name="mylistText">My List</string>
    <string name="titleEn">Welcome to RadioG</string>
    <string name="titleBn">রেডিওজি তে স্বাগতম</string>
    <string name="exclusive_tab_bn">এক্সক্লুসিভ</string>
    <string name="new_tab_bn">নতুন</string>
    <string name="category_tab_bn">ক্যাটাগরী</string>
    <string name="exclusive_tab">Exclusive</string>
    <string name="new_tab">New</string>
    <string name="category_tab">Category</string>
    <string name="artist_bn">আর্টিস্ট</string>
    <string name="lyrics_bn">লিরিকস</string>
    <string name="artist">Artist</string>
    <string name="lyrics">Lyrics</string>
    <string-array name="MainActivity_Bangla">
        <item>এক্সক্লুসিভ</item>
        <item>নতুন</item>
        <item>ক্যাটাগরী</item>
    </string-array>
    <string-array name="MainActivity_English">
        <item>Exclusive</item>
        <item>New</item>
        <item>Categories</item>
    </string-array>
    <string-array name="Search_English">
        <item>Artist</item>
        <item>Album</item>
        <item>Song</item>
    </string-array>
    <string-array name="Search_Bangla">
        <item>শিল্পী</item>
        <item>অ্যালবাম</item>
        <item>গান</item>
    </string-array>
    <string name="title_activity_player">RadioG</string>
    <string name="title_activity_abum_artist">RadioG</string>
    <string name="max_text">See All</string>
    <string name="welcome_radiog">Welcome to RadioG</string>
    <string name="title_activity_list_artist_albm">RadioG</string>
    <string-array name="etisalat_ips">
        <item>37.245.160.0/20</item>
        <item>5.38.0.0/19</item>
        <item>31.218.128.0/20</item>
        <item>176.204.112.0/20</item>
        <item>176.204.144.0/20</item>
        <item>176.204.64.0/20</item>
        <item>176.204.96.0/20</item>
        <item>176.204.16.0/20</item>
        <item>2.48.64.0/20</item>
        <item>2.48.128.0/19</item>
        <item>2.48.160.0/19</item>
        <item>31.219.96.0/19</item>
        <item>176.204.32.0/19</item>
        <item>94.58.128.0/19</item>
        <item>31.218.176.0/20</item>
        <item>2.48.32.0/19</item>
        <item>176.204.160.0/19</item>
        <item>31.218.0.0/19</item>
        <item>31.218.32.0/19</item>
        <item>94.57.48.0/21</item>
        <item>94.57.164.0/22</item>
        <item>5.38.32.0/19</item>
        <item>2.48.118.0/23</item>
        <item>2.48.120.0/23</item>
        <item>2.48.122.0/23</item>
        <item>2.48.124.0/23</item>
        <item>2.48.126.0/23</item>
        
        
    </string-array>
    <string-array name="country_code">
        <item>ae</item>
        
    </string-array>
    <string name="app_permission">This app require SMS Receive and Read permission to obtain auto OTP enter. Please note this is important to get RadioG App fully functional.</string>
    <string name="exit_message_en">Are you sure want to Exit?</string>
    <string name="exit_message_bn">আপনি কি বের হতে চান?</string>
    <string name="tag">RadioG</string>
    <string name="image_url">http://www.radiogbd.com</string>
    <string name="cat_image_url">http://www.radiogbd.com/images/categories/</string>
    <string name="short_code">1110</string>
    <string name="bangla">বাংলা</string>
    <string name="task">Notification</string>
    <string name="featuring_bn">ফিচারিং</string>
    <string name="featuring_en">Featuring</string>
    <string name="playing_bn">এখন চলছে</string>
    <string name="playing_en">Now Playing</string>
    <string name="album_bn">অ্যালবাম</string>
    <string name="album_en">Album</string>
    <string name="one">১</string>
    <string name="two">২</string>
    <string name="three">৩</string>
    <string name="four">৪</string>
    <string name="five">৫</string>
    <string name="six">৬</string>
    <string name="seven">৭</string>
    <string name="eight">৮</string>
    <string name="nine">৯</string>
    <string name="zero">০</string>
    <string name="search_track">গান</string>
    <string name="search_album">অ্যালবাম</string>
    <string name="search_artist">আর্টিস্ট</string>
    <string name="search_lyrics">লিরিকস</string>
    <string name="search_tune">টিউন</string>
    <string name="see_more">আরো দেখতে</string>
    <string name="no_data">ডাটা নেই</string>
    <string name="search_result">আপনার অনুসন্ধান</string>
    <string name="search">অনুসন্ধান</string>
    <string name="exit_message">আপনি কি বের হতে চান?</string>
    <string name="yes">হ্যাঁ</string>
    <string name="no">না</string>
    <string name="exit">বাহির</string>
    <string name="next_song">পরবর্তী গান</string>
    <string-array name="schedules">
        <item>11:30</item>
        <item>19:30</item>
    </string-array>
    <string name="notificationBn">উপভোগ করুন নতুন অ্যালবাম</string>
    <string name="notificationEn">Enjoy our latest album</string>
    <string name="no_internet">No Internet</string>
    <string name="http_error">HTTP Server Error</string>
    <string name="robi_athurization_key">Basic YWRtaW46R3RlY2hTRFBWMQ==</string>
    <string name="authorization_key">Basic Z3RlY2g6Z3RlY2gzMjE=</string>
    <string name="robi_premium_message_bn">প্রিমিয়াম গান শুনতে/ডাউনলোড করতে সাপ্তাহিক সাবস্ক্রিপশন প্রয়োজন, যা ৬.৩৮ টাকা প্রতি সপ্তাহে (অটো রিনিউয়াল)। আপনি হ্যাঁ বাটন চাপলে ইউএসএসডি এর জন্য অপেক্ষা করুন।</string>
    <string name="robi_premium_message_en">Please Subscribe to Listen/Download Premium Content with BDT 6.38 Per Week (Auto Renewal). If you press yes then wait for USSD confirmation.</string>
    <string name="bangalink_premium_message_bn">প্রিমিয়াম গান শুনতে/ডাউনলোড করতে দৈনিক সাবস্ক্রিপশন প্রয়োজন, যা ২.৫৫ টাকা প্রতি দিন। আপনি কি নিবন্ধন করতে চান?</string>
    <string name="banglalink_premium_message_en">Please Subscribe to Listen/Download Premium Content with BDT 2.55 Per Day. Are you sure want to subscribe?</string>
    <string name="gp_premium_message_bn">এই গানটি শুনতে ১/৫/১০/২০/৪০/৫০ টাকা চার্জ প্রযোজ্য। আপনি কি আগ্রহী?</string>
    <string name="gp_premium_message_en">To listen the song charge 1/5/10/20/40/50 Taka applicable. Are you sure want to proceed?</string>
    <string name="bkash_premium_message_bn">রেডিওজি অ্যাপের মাধ্যমে যেকোন ধরনের গান শুনতে বিকাশ নাম্বার নিবন্ধন প্রয়োজন। নিবন্ধিত হয়ে যাওয়ার পর রেডিওজি সাবস্ক্রিপশন চার্জ আপনার বিকাশ নম্বর থেকে অনুমতি সাপেক্ষে কেটে নেয়া হবে। বিকাশ-এর রেডিওজি সার্ভিসে আপনাকে স্বাগতম।</string>
    <string name="bkash_premium_message_en">To listen the song from RadioG app, bKash number registration is required. After the registration RadioG subscription charge will be deducted from the bKash number with your permission. Welcome to the bKash RadioG service.</string>
    <string name="meesage_en">Your request is being precessed. You will get a SMS notification, when your service will be deactivated. Please check after a while.</string>
    <string name="meesage_bn">আপনার আবেদনটি প্রসেস করা হচ্ছে. আপনি একটি এসএমএস পাবেন, যখন আপনার রিকোয়েস্ট বন্ধ হবে। দয়া করে কিছুক্ষন পর চেষ্টা করুন।</string>
    <string name="robi_confirmation_msg_bn">আপনার আবেদনটি প্রসেস করা হচ্ছে. আপনি একটি ইউএসএসডি মেসেজ পাবেন, যেখানে আপনাকে ১ চাপতে হবে। তারপর আপনি একটি এসএমএস পাবেন, যখন আপনার রিকোয়েস্ট চালু হবে। দয়া করে কিছুক্ষন পর চেষ্টা করুন।</string>
    <string name="robi_confirmation_msg_en">Your request is being processed. You will get an USSD pop up. Please press 1 for confirmation. Then you will get a SMS notification, when your service will be activated. Please check after a while.</string>
    <string name="gp_confirmation_msg_bn">আপনার আবেদনটি প্রসেস করা হচ্ছে. আপনি একটি এসএমএস পাবেন, যখন আপনার রিকোয়েস্ট চালু হবে। দয়া করে কিছুক্ষন পর চেষ্টা করুন।</string>
    <string name="gp_confirmation_msg_en">Your request is being precessed. You will get a SMS notification, when your service will be activated. Please check after a while.</string>
    <string name="banglalink_confirmation_msg_bn">আপনার আবেদনটি প্রসেস করা হচ্ছে. আপনি একটি এসএমএস পাবেন, যখন আপনার রিকোয়েস্ট চালু হবে। দয়া করে কিছুক্ষন পর চেষ্টা করুন।</string>
    <string name="banglalink_confirmation_msg_en">Your request is being precessed. You will get a SMS notification, when your service will be activated. Please check after a while.</string>
    <string name="bkash_registration_en">bKash Payment</string>
    <string name="bkash_registration_bn">বিকাশ পেমেন্ট</string>
    <string name="ok_en">Ok</string>
    <string name="ok_bn">ঠিক আছে</string>
    <string name="service_number_bn">সার্ভিস নাম্বারঃ</string>
    <string name="service_number_en">Service Number:</string>
    <string name="service_operator_bn">সার্ভিস অপারেটরঃ</string>
    <string name="service_operator_en">Service Operator:</string>
    <string name="service_status_bn">সার্ভিস স্যাটাসঃ</string>
    <string name="service_status_en">Service Status:</string>
    <string name="status_on_bn">চালু</string>
    <string name="status_on_en">On</string>
    <string name="gp_message_en">Grameenphone \nSubscription without autorenewal</string>
    <string name="rb_message_en">Robi \nWeekly 5TK+(VAT+SD+SC), with autorenewal.</string>
    <string name="bl_message_en">Banglalink \nDaily	2TK+(VAT+SD+SC), with autorenewal.</string>
    <string name="bk_gr_message_en">Ghoori Portal - bKash \nBDT 20/Month.</string>
    <string name="bk_on_message_en">Fundesh - bKash \nBDT 20/Month.</string>
    <string name="skitto_message_en">Skitto - Subscription</string>
    <string name="skitto_daily_message_en">Daily BDT 2.55 (with SD, VAT and Surcharge)</string>
    <string name="skitto_weekly_message_en">Weekly BDT 6.38 (with SD, VAT and Surcharge)</string>
    <string name="skitto_month_message_en">Monthly BDT 25.50 (with SD, VAT and Surcharge)</string>
    <string name="tag_gp">GP</string>
    <string name="tag_rb">RB</string>
    <string name="tag_bl">BL</string>
    <string name="tag_gr">BK</string>
    <string name="tag_on">ON</string>
    <string name="tag_skitto">SK</string>
    <string name="tag_daily_skitto">SK_DAILY</string>
    <string name="tag_weekly_skitto">SK_WEEKLY</string>
    <string name="tag_monthly_skitto">SK_MONTHLY</string>
</resources>