<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dark_dialog_back"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="Are you sure want to choose the following plan?"
        android:textColor="@color/pureWhite"
        android:textSize="@dimen/font_size_big" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:background="@color/buttonColor" />

    <RadioGroup
        android:id="@+id/rb_skitto_package"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:visibility="visible">

        <RadioButton
            android:id="@+id/rb_skitto_daily"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:buttonTint="@color/buttonColor"
            android:gravity="start"
            android:paddingTop="5dp"
            android:tag="@string/tag_daily_skitto"
            android:text="@string/skitto_daily_message_en"
            android:textColor="@color/pureWhite"
            android:textSize="@dimen/font_size_big" />

        <RadioButton
            android:id="@+id/rb_skitto_weekly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:buttonTint="@color/buttonColor"
            android:gravity="start"
            android:paddingTop="5dp"
            android:tag="@string/tag_weekly_skitto"
            android:text="@string/skitto_weekly_message_en"
            android:textColor="@color/pureWhite"
            android:textSize="@dimen/font_size_big" />

        <RadioButton
            android:id="@+id/rb_skitto_monthly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:buttonTint="@color/buttonColor"
            android:gravity="start"
            android:paddingTop="5dp"
            android:tag="@string/tag_monthly_skitto"
            android:text="@string/skitto_month_message_en"
            android:textColor="@color/pureWhite"
            android:textSize="@dimen/font_size_big" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:paddingRight="20dp"
        android:paddingBottom="5dp"
        android:text=""
        android:textColor="@color/pureWhite"
        android:textSize="@dimen/font_size_big" />

    <TextView
        android:id="@+id/tv_plan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:paddingLeft="20dp"
        android:paddingTop="2dp"
        android:paddingRight="20dp"
        android:paddingBottom="5dp"
        android:text=""
        android:textColor="@color/pureWhite"
        android:textSize="@dimen/font_size_big" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_no"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_gravity="right"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/rounded_button"
            android:text="No"
            android:textColor="@color/pureWhite"
            android:textSize="@dimen/btn_font_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_gravity="right"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/rounded_red_solid"
            android:text="Yes"
            android:textColor="@color/pureWhite"
            android:textSize="@dimen/btn_font_size"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>